@@ -2108,3 +2108,9 @@ Updated README.
 
 Updated pypi readme.
 
+
+*****  Thu Dec 31 21:48:43 CET 2020  *****
+
+Moved find_closing_bracket() from browser.py to utils.py.
+Updated docstring and added tests.
+
